--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="samodurkabot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+    <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="samplebot" data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
 <script type="text/javascript">
   function onTelegramAuth(user) {
     alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
